<resources>
    <string name="app_name">Minha Agenda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_novo_compromisso">Novo Compromisso</string>
    <string name="btn_data">Data</string>
    <string name="btn_hora">Hora</string>
    <string name="descricao">Descrição</string>
    <string name="desc">Descrição do compromisso</string>
    <string name="btn_ok">OK</string>
    <string name="compromissos_cadastrados">Compromissos cadastrados</string>
    <string name="btn_hoje">Hoje</string>
    <string name="btn_outradata">Outra data</string>
    <string name="hint_compromissos">Lista de compromissos cadastrados</string>
</resources>